[tool.poetry]
name = "exenworldgen"
version = "0.1"
description = "Cool world generator"
authors = ["Exenifix"]
readme = "README.md"
repository = "https://github.com/Exenifix/worldgen"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
exencolor = ">=1.0,<2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.12.0"
ruff = "^0.0.215"
isort = "^5.11.4"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["src/exenworldgen/__init__.py"]

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
